--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-query": "^3.15.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
+    "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-query": "^1.1.2",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9"
   }
 }
